--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Chien-Fu Chen <chienfuchen32@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "konva": "^1.2.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-konva": "^1.1.1",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "^0.63.2"
   },
